<resources>
    <string name="app_name">GuestList</string>
    <string name="navigation_drawer_open">Abrir Menu</string>
    <string name="navigation_drawer_close">Fechar Menu</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="configuracoes">Configurações</string>

    <string name="todos">Todos</string>
    <string name="confirmados">Confirmados</string>
    <string name="pendentes">Pendentes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtNome">Nome</string>
    <string name="txtConfirmado">Confirmado</string>
    <string name="txtPendente">Pendente</string>
    <string name="txtNegado">Negado</string>
    <string name="txtSalvar">SALVAR</string>
    <string name="erroNome">Nome é obrigatório</string>
    <string name="sucessoSalvar">Convidado salvo com sucesso!</string>
    <string name="erroSalvar">Algo de errado aconteceu...</string>
    <string name="txtNumero">Numero</string>
    <string name="erroNumero">\"Número é obrigatório\"</string>
    <string name="txtListaEventos">Lista de Eventos</string>
    <string name="txtAdicionar_evento">ADICIONAR EVENTO</string>
    <string name="txtNomeEvento">Nome do Evento</string>
    <string name="txtData">Data</string>
    <string name="txtHorario">Horário</string>
    <string name="txtLocalEvento">Local</string>
    <string name="txtResp">Responsável</string>
    <string name="txtCapacidade">Capacidade</string>
    <string name="title_activity_eventos">EventosActivity</string>
</resources>
