<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/layout"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/tvNomeEvento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:hint="@string/txtNomeEvento"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvDataEvento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/txtData"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvHoraEvento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/txtHorario"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvLocalEvento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtLocalEvento"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvRespEvento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtResp"
        android:textSize="20sp" />


</LinearLayout>